apps/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  labels: { app.kubernetes.io/name: frontend }
spec:
  selector: { app.kubernetes.io/name: frontend }
  ports:
    - { name: http, port: 80, targetPort: http }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  labels: { app.kubernetes.io/name: frontend }
spec:
  selector: { app.kubernetes.io/name: frontend }
  ports:
    - { name: http, port: 80, targetPort: http }
